tests/fixtures/negative/skf1-missing-final-chunk.hex
534b4631010100100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
